istio-k8s/techleadsapi/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techleadsapiv1
  namespace: techleads
  labels:
    app: techleadsapi
    version: version1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techleadsapi
      version: version1
  template:
    metadata:
      labels:
        app: techleadsapi
        version: version1
    spec:
      containers:
      - name: techleadsapi
        image: emiteze/techleadsapi:version1
        ports:
        - containerPort: 8080
