istio-k8s/techleadsapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: techleadsapi
    service: techleadsapi
  name: techleadsapi
  namespace: techleads
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: techleadsapi
  type: ClusterIP
