istio-k8s/techleadsapi/destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: techleadsapi
  namespace: techleads
spec:
  host: techleadsapi
  subsets:
    - labels:
        version: version1
      name: v1
    - labels:
        version: version2
      name: v2
