istio-k8s/techleadsapi/virtualservices_router.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: techleadsapi
  namespace: techleads
spec:
  hosts:
    - techleadsapi
  http:
    - match:
        - headers:
            x-debug:
              exact: "1"
      route:
        - destination:
            host: techleadsapi
            subset: v1
    - route:
      - destination:
          host: techleadsapi
          subset: v2
